# testing-demo

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  compares.py  main.py  pyproject.toml
tests/: compares_test.py
