[project]
name = "testing-demo"
version = "0.1.0"
description = "Simple demo of testing tricks"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Jeffrey S. Haemer", email = "jeffrey.haemer@gmail.com"}]
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-random-order>=1.1.1",
    "ruff>=0.11.11",
]
[tool.pytest.ini_options]
addopts = """
    --random-order
    --cov=.
    --cov-report term-missing
    --cov-report html:htmlcov
"""
[tool.coverage.run]
omit = [
    "__init__.py",
    "main.py",
    "tests/*",
]
