[project]
name = "testing-demo"
version = "0.1.0"
description = "Simple demo of testing tricks"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Jeffrey S. Haemer", email = "jeffrey.haemer@gmail.com"}]
license = "MIT"
dependencies = [
    "mutmut>=3.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-random-order>=1.1.1",
    "ruff>=0.11.11",
]
[tool.pytest.ini_options]
addopts = """
    --random-order
    --cov=.
    --cov-report term-missing
    --cov-report html:htmlcov
"""
[tool.coverage.run]
omit = [
    "__init__.py",
    "main.py",
    "tests/*",
    "mutants/*",
]
[tool.mutmut]
# Specify the path(s) to your source code file(s) relative to the project root.
# Use "." for the current directory, or list specific files.
paths_to_mutate = ["compares.py"]
# Command to run your tests from the project root directory.
runner = "pytest tests/"
